[package]
name = "pallet-octopus-appchain-benchmarking"
description = "Pallet benchmarking for octopus-appchain."
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }

sp-runtime = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
pallet-uniques = { workspace = true, default-features = false }


pallet-octopus-appchain = { default-features = false, path = "../../appchain" }
pallet-octopus-bridge = { default-features = false, path = "../../bridge" }
pallet-octopus-support = { default-features = false, path = "../../support" }

[dev-dependencies]
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"] }
scale-info.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-staking.workspace = true
sp-std.workspace = true

pallet-balances.workspace = true
pallet-timestamp.workspace = true
pallet-session = { workspace = true, features = ["historical"] }

pallet-octopus-lpos = { path = "../../lpos" }
pallet-octopus-upward-messages = { path = "../../upward-messages" }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-octopus-appchain/std",
	"pallet-octopus-bridge/std",
	"pallet-assets/std",
	"pallet-uniques/std",
	"pallet-octopus-support/std",
	"scale-info/std",
	"codec/std",
]

runtime-benchmarks = []