[package]
name = "pallet-octopus-lpos-reward-curve"
version = "3.0.0-pre.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Reward Curve for FRAME LPoS pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.58", features = ["full", "visit"] }
quote = "1.0.3"
proc-macro2 = "1.0.6"
proc-macro-crate = "1.0.0"

[dev-dependencies]
sp-runtime = { version = "3.0.0" }
